# uu

./: .gitignore  CMakeLists.txt  a
bak/: k  m
bak/grpc.example/cpp/helloworld/: greeter_client.cc  greeter_server.cc
bak/grpc.example/protos/: helloworld.proto
bak/html.ok/: echarts.min.js  fincharts.js  fincharts.js.bak  index.html  kkk.html  ping.html  stock.html  tq1.html  vue.js
bak/html.ok/bak/: fincharts.js.bbb
bak/postgresql/: Pm  Pmain.cpp  Psqlconn.cpp  Psqlconn.h  Psqlpool.cpp  Psqlpool.h
dat/: test1.py
engine/grpc/cpp/uquantapi/: uapi_async_client2.cc  uapi_async_server.cc  uapi_server.cc
engine/inc/: ApiClient.h  BitMap.h  Echo.h  Global.h  HubApi.h  HubSim.h  MdSpi.h  MkSim.h
engine/src/: ApiClient.cpp  Base.cpp  BitMap.cpp  ErrLog.cpp  HubApi.cpp  Makefile  Makefile.20190512  MdSpi.cpp  PsqlFunc.cpp  m
engine/src/bak/: Dataserver.cpp.bbb  Makefile.bbb  Makefile.ooo  see_ctpget.cpp
engine/src/bak/com/inc/: .bak  see_cjson.h  see_future.h  see_pubsub.h  see_strategy.h  see_zmq.h
engine/src/bak/com/src/: see_cjson.c  see_polyfit.c  see_pubsub.c  see_recieve.c  see_signal.c  see_zdbfun.c  see_zmq.c
engine/src/bak/tests/: m  tc.cpp
etc/json/: kdata.json  see_brokers.json  see_conf.json  see_strategy.json  see_stt01.json  see_trade_time.json  see_trade_time.json.bak  see_trade_time_00.json  t.json
etc/tbl/: brokers.xml  readme.txt  see_future_days  see_future_table  see_future_table.bak  see_trade_time  tcp  tcp1  tcp2  tick_file_name.txt
etc/tbl.1/: a.sh  b.sh  czce  dce  fcodes  fcodes1  fcodes2  firstday.txt  future.txt  map.txt.ok  see_future_time
ext/: README.md
ext/seeta/: CMakeLists.txt  readme
ext/seeta/inc/: seeta.h
ext/seeta/src/: Makefile  see_talib.cpp  seeta.c
grpc/cpp/uquantapi/: Makefile  Makefile.bak  uapi_client.cc  uquantapi.grpc.pb.h  uquantapi.pb.cc  uquantapi.pb.h
html/: fincharts.js  fincharts.js.new  line1.html  stats.min.js  tq2.html
inc/: Daemon.h  HubBck.h  Json.h  uBEE.h
inc/bak/: FuList.h  Roll.h
indicator/: Makefile
mak/: readme.md
run/: a.sh
run/dat/: test.py  test2.py
run/exe/: g
run/tbl/: c.sh  s.sh
script/: find.txt
src/: Bars.cpp  Dataserver.cpp  File.cpp  Global.cpp  HubCtp.cpp  HubSim.cpp  Json.cpp  MkCtp.cpp  Psqlpool.cpp  Title.cpp  Tqdata.cpp
src/bak/: Bars.KBar.cpp  Bars.h.ok  Base.cpp.bak  CtpGet.cpp  Json.cpp.20180113  Main.cpp  MdSpi.cpp  MkSim1.cpp  z.txt
src/bak/com/inc/: see_bars.h  see_com_third.h  see_config.h  see_errlog.h  see_polyfit.h
src/bak/com/inc/bak/: see_database.h  see_errno.h  see_string.h  see_times.h
src/bak/com/src/: kkk.c  see_config.c  see_errlog.c  see_mariadb.c  see_strategy.c
src/bak/com/src/bak/: kkk.sh  see_bars.c.20161030  see_bars.c.ok  see_errlog.kkk  see_iosmain.0917.2301.ok  see_iosmain.bak1  see_iosmain.bak2  see_pubsub.bak  see_recieve.c.20161218  see_syslog.c
src/bak/cpp/mds/inc/: MdSpi.h
src/bak/tests/: tccccc.x
t/: mnf.cpp.ok  t1.cpp
t/index.old/: Ind.cpp  Ind.h
tbl/: cmd.txt  future  sed.txt  shfe  what.txt
trader/: Index.bak  Index.h  Main.cpp  Makefile  Makefile.20190505  Makefile.main  mnf.cpp  mnf.cpp.0507  mnf.cpp.bak
trader/indicator/: Indicator.cpp  Indicator.h
uquant/: CMakeLists.txt  mm
uquant/cmake/: Findctp.cmake  FinduWS.cmake  cJSON.cmake
uquant/grpc/: reference
uquant/grpc/cpp/uquantapi/: uapi_async_client.cc  uapi_client.h  uquantapi.grpc.pb.cc
uquant/grpc/cpp/uquantapi/cmake_externalproject/: CMakeCache.txt
uquant/grpc/cpp/uquantapi/cmake_externalproject/c-ares/tmp/: c-ares-cfgcmd.txt
uquant/grpc/protos/: uquantapi.proto
uquant/inc/: ApiFun.h  Bars.h  File.h  HubCtp.h  TdFuBo.h  Title.h
uquant/inc/bak/: Bars.ok1  Index.bak  strategy.bak
uquant/src/: Bars.cpp  Bars.h  Base.h  BitMap.cpp  CMakeLists.txt  Daemon.cpp  ErrLog.h  FuGen.cpp  FuList.cpp  FuList.h  Global.cpp  HubApi.cpp  HubBck.cpp  MdSpi.h  MkCtp.cpp  MkCtp.h  MkSim.cpp  PsqlFunc.h  Psqlpool.h  TdFuBo.cpp  Webserver.cpp
uquant/src/Common/: Version.h.in
uquant/src/bak/: Bars.cpp.bbb  Bars.cpp.ok  Bars_TQ.cpp
uquant/src/bak/com/inc/: see_com_auto.h  see_com_common.h  see_com_linux.h  see_file.h  see_iofile.h  see_signal.h  see_zdbfun.h
uquant/src/bak/com/inc/bak/: see_log.h  see_msgque.h  see_syslog.h  see_talib.h
uquant/src/bak/com/src/: .see_signal.c.swp  see_future.c  see_iofile.c  see_testkdj.c  see_waiter.c
uquant/src/bak/com/src/bak/: see_bars.c.20161218  see_errno.c  see_iosmain.bak  see_iosmain.bbb  see_mariadb.c.bak  see_msgque.c  see_recieve.c.bak  see_string.c  see_talib.c.20161118  see_talib.c.bak  see_temp.c
uquant/src/bak/cpp/: Makefile  Makefile.bak
uquant/src/bak/cpp/mds/inc/: see_ctpget.h
uquant/src/bak/cpp/mds/src/: MdSpi.cpp  see_sndtst.cpp
uquant/src/bak/cpp/mds/src/bak/: MdSpi.cpp.20161003.001
uquant/src/bak/cpp/pro/src/: see_master.cpp
uquant/src/bak/cpp/tds/src/: TraderSpi.cpp  TraderSpi.h
website/: .line1.html.swp  back.html  ball.html  dark.js  echarts.min.js  index.html  index1.html  layui.html  line.html  tq.html  tq3.html  tt01.html  webgl.html
website/layui/examples/: back.html
website/test/: index.html  test.js
(+29 files in other folders)
